Reinstate instructions for running